# ufw-log-viewer

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
scripts/: update_iana_services.sh
src/: clipboard.rs  main.rs  net.rs  parser.rs  services.rs
